# canbus-gauge

./: Cargo.toml  memory.x
.cargo/: config.toml
cad/: canbus-gauge-case-back.FCStd  canbus-gauge-case-back.stl  canbus-gauge-case-front.FCStd  canbus-gauge-case-front.stl  canbus-gauge-case.3mf
scripts/: send_test_frames
src/: canbus.rs  canbus_reader.rs  constants.rs  display.rs  globals.rs  main.rs  types.rs
